--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="titulo-seccion">Sobre Mi</p>
         <h2>Hola soy <span>Alejandro Riveiro</span></h2>
         <h3>Full Stack Developer Jr</h3>
-        <p>Nombre: Alejandro Riveiro<br>Edad: 53 años<br>Direccion: A. Magariño Cervantes 5175, CABA, Argentina<br>Telefono: 117120-9560<br>Mail: alejandrogriveiro@gmail.com<br><br>Para mas datos descarga mi CV </p>
+        <p>Nombre: Alejandro Riveiro<br>Edad: 54 años<br>Direccion: A. Magariño Cervantes 5175, CABA, Argentina<br>Telefono: 117120-9560<br>Mail: alejandrogriveiro@gmail.com<br><br>Para mas datos descarga mi CV </p>
         <a href="./CV Alejandro.pdf">Descargar CV</a>
 
     </div>
@@ -100,7 +100,7 @@
     <h3>HABILIDADES</h3>
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Html</p>
+            <p><span class="lista"></span>HTML</HTML><img src="./img/html5-wordmark.svg" alt=""></p>
             <span class="porcentaje">80%</span>
         </div>
         <div class="barra">
@@ -110,7 +110,7 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Css</p>
+            <p><span class="lista"></span>CSS <img src="./img/css-3.svg" alt=""></p>
             <span class="porcentaje">80%</span>
         </div>
         <div class="barra">
@@ -120,7 +120,7 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Javascript</p>
+            <p><span class="lista"></span>JavaScript <img src="./img/javascript.svg" alt=""></p>
             <span class="porcentaje">60%</span>
         </div>
         <div class="barra">
@@ -130,7 +130,7 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Phyton</p>
+            <p><span class="lista"></span>Phyton <img src="./img/python-wordmark.svg" alt=""></p>
             <span class="porcentaje">50%</span>
         </div>
         <div class="barra">
@@ -140,11 +140,21 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Base de Datos</p>
+            <p><span class="lista"></span>Base de Datos <img src="./img/mysql.svg" alt=""></p>
             <span class="porcentaje">50%</span>
         </div>
         <div class="barra">
             <div id="bd" class=""></div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <div class="info">
+            <p><span class="lista"></span>NODE-JS <img src="./img/nodejs.svg" alt=""></p>
+            <span class="porcentaje">50%</span>
+        </div>
+        <div class="barra">
+            <div id="node" class=""></div>
         </div>
     </div>
 
