actualizacion de datos al 31-12-2023

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="presentacion">
             <p class="bienvenida">Bienvenidos</p>
             <h2>Soy <span>Alejandro Riveiro</span>, Full Stack Developer Jr</h2>
-            <p class="descripcion">Ayudante de Contador con mas de 10 años de experiencia en el rubro obtenido principalmente en pequeñas y medianas empresas
+            <p class="descripcion">Ayudante de Contador con mas de 15 años de experiencia en el rubro obtenido principalmente en pequeñas y medianas empresas
                 lo que me ayudó a obtener un conocimiento general de la operatoria y de áreas como contaduria, rrhh y sistemas.
-                 Actualmente, me encuentro aprendiendo sobre programación Full Stack, Python y Big Data entre otros.</p>
+                 Actualmente me encuentro aprendiendo sobre programación Full Stack, Python, Node-JS y Big Data entre otros.</p>
                 <a href="#portfolio">Ir a Portfolio</a>
         </div>
     </div>
@@ -100,7 +100,8 @@
     <h3>HABILIDADES</h3>
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>HTML</HTML><img src="./img/html5-wordmark.svg" alt=""></p>
+            <p><span class="lista"></span>HTML</HTML></p>
+            <img src="./img/html5-wordmark.svg" alt="">
             <span class="porcentaje">80%</span>
         </div>
         <div class="barra">
@@ -110,7 +111,8 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>CSS <img src="./img/css-3.svg" alt=""></p>
+            <p><span class="lista"></span>CSS</p>
+            <img src="./img/css-3.svg" alt="">
             <span class="porcentaje">80%</span>
         </div>
         <div class="barra">
@@ -120,7 +122,8 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>JavaScript <img src="./img/javascript.svg" alt=""></p>
+            <p><span class="lista"></span>JavaScript</p>
+            <img src="./img/javascript.svg" alt="">
             <span class="porcentaje">60%</span>
         </div>
         <div class="barra">
@@ -130,7 +133,8 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Phyton <img src="./img/python-wordmark.svg" alt=""></p>
+            <p><span class="lista"></span>Phyton</p>
+            <img src="./img/python-wordmark.svg" alt="">
             <span class="porcentaje">50%</span>
         </div>
         <div class="barra">
@@ -140,7 +144,8 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>Base de Datos <img src="./img/mysql.svg" alt=""></p>
+            <p><span class="lista"></span>Base de Datos</p>
+            <img src="./img/mysql.svg" alt="">
             <span class="porcentaje">50%</span>
         </div>
         <div class="barra">
@@ -150,7 +155,8 @@
 
     <div class="skill">
         <div class="info">
-            <p><span class="lista"></span>NODE-JS <img src="./img/nodejs.svg" alt=""></p>
+            <p><span class="lista"></span>NODE-JS</p>
+            <img src="./img/nodejs.svg" alt="">
             <span class="porcentaje">50%</span>
         </div>
         <div class="barra">
