--- a/index.html
+++ b/index.html
@@ -69,28 +69,20 @@
    <section id="servicios">
     <h3 class="titulo-seccion">MIS SERVICIOS</h3>
     <div class="fila">
-        <div class="servicio">
+        <div id="img_web" class="servicio">
             <span class="icono"><i class="fa-solid fa-code"></i></span>
             <h4>Diseño de Sitios Web</h4>
             <hr>
-            <ul class="servicios-tag">
-                <li>Web</li>
-                <li>Graphic</li>
-                <li>SEO</li>
-            </ul>
+
             <p>Diseños eficaces y personalizados, usabilidad, accesibilidad, responsive design, CMS</p>
         </div>
 
-        <div class="servicio">
+        <div id="img_adm" class="servicio">
             <span class="icono"><i class="fa-solid fa-calculator"></i></span>
             <h4>Administrativo Contable</h4>
             <hr>
-            <ul class="servicios-tag">
-                <li>Web</li>
-                <li>Graphic</li>
-                <li>SEO</li>
-            </ul>
-            <p>Auditoria. Bancos. Conciliadiones de Ctas. Armado de FILE balances mensuales/anuales. Armado y seguimiento de Chashflow.</p>
+
+            <p>Auditoria. Bancos. Conciliadiones de Ctas. Armado de FILE, balances mensuales/anuales. Armado y seguimiento de Chashflow.</p>
         </div>
 
     </div>
